<resources>

    <string name="app_name">SMS Fence Detection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_info">Info</string>
    <string name="hello_blank_fragment">Map of my Geofences</string>
    <string name="new_fence_text"> Add a new Fence!\n</string>
    <string name="credits_string">CREDITS TO ME</string>
    <string name="labelName">Name</string>
    <string name="labelAddress">Address</string>
    <string name="labelButtonSave">Save</string>
    <string name="labelEvent">Event</string>
    <string name="labelRange">Range(m)</string>
    <string name="labelTextSMS">Text SMS</string>
    <string name="labelNumber">Number</string>
    <string name="labelProvince">Province</string>
    <string name="labelCity">City</string>
    <string name="fenceIcon">fenceIcon</string>
    <string name="labelPollingStrategy">Polling Location every 5 seconds</string>
    <string name="labelBetterApproach">Better Approach fence detection</string>
    <string name="labelLowNetwork">Low Network</string>
    <string name="labelPrecision">High Precision</string>
    <string name="labelBatteryHigh">High</string>
    <string name="labelBatteryLow">Low</string>
    <string name="iconBattery">iconBattery</string>
    <string name="iconPrecision">iconPrecision</string>
    <string name="iconnetwork">iconNetwork</string>
    <string name="imageHome">imageHome</string>
    <string name="textSMSHome">Contacts are notified of the event, automatically!</string>
    <string name="textMovementHome">Move between the fences (ENTER/EXIT)</string>
    <string name="textStartServiceHome">Start the service</string>
    <string name="textPickHome">Pick your fences</string>
    <string name="imageHomedescription">imageHomedescription</string>
    <string name="imageSMSDescription">imageSMSDescription</string>
    <string name="imageMovementDescription">imageMovementDescription</string>
    <string name="myname">Andrea Sghedoni</string>
    <string name="gmail_contact">andre.sghedoni@gmail.com</string>
    <string name="unibo_contact">andrea.sghedoni4@studio.unibo.it</string>
    <string name="github_contact">https://github.com/andresghedo/</string>
    <string name="string_info_year">SMS Fence Detection is an accademic project A.A. 2015/16</string>
    <string name="string_info_uni">Master Degree on Computer Science, Mobile Systems Course\n@\nAlma Mater Studiorum, University of Bologna</string>
    <string name="uniBoIcon">uniBoIcon</string>

    <string-array name="range_geofence">
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>

    <string-array name="event_geofence">
        <item>ENTER</item>
        <item>EXIT</item>
        <item>ENTER/EXIT</item>
    </string-array>

</resources>
