<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.InfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_info_year"
            android:id="@+id/textView13"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_info_uni"
            android:id="@+id/textView14"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:src="@mipmap/ic_uni_bologna"
            android:layout_weight="0.38"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/uniBoIcon" />

    </LinearLayout>

</FrameLayout>
